--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:eQ8dfOQchXY1GS74ukP8F/SVzaR4Ds8GMPoAoQ4ldqk=
 APP_DEBUG=true
 APP_URL=http://localhost
 
