--- a/package.json
+++ b/package.json
@@ -8,10 +8,17 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "@vitejs/plugin-vue": "^5.2.4",
+        "autoprefixer": "^10.4.21",
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "tailwindcss": "^4.0.0",
+        "postcss": "^8.5.3",
+        "tailwindcss": "^4.1.8",
         "vite": "^6.2.4"
+    },
+    "dependencies": {
+        "leaflet": "^1.9.4",
+        "vue": "^3.5.16"
     }
 }
