--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "dependencies": {
         "leaflet": "^1.9.4",
-        "vue": "^3.5.16"
+        "vue": "^3.5.16",
+        "vue-router": "^4.5.1"
     }
 }
